--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -55,7 +55,7 @@ public class ${table.controllerName} {
      */
     @GetMapping(value = "/tabulation.html")
     @ApiOperation(value = "/tabulation.html", notes = "跳转到${table.entityPath}的列表页面")
-    public String to${entity}List(Model model) {
+    public String to${entity}List(@ApiParam(name = "Model", value = "model") Model model) {
         return "${table.entityPath}/tabulation";
     }
 
@@ -66,7 +66,7 @@ public class ${table.controllerName} {
      */
     @GetMapping(value = "/{${table.entityPath}Id}/update.html")
     @ApiOperation(value = "/{${table.entityPath}Id}/update.html", notes = "跳转到修改页面")
-    public String toUpdate${entity}(Model model, @PathVariable(value = "${table.entityPath}Id") Long ${table.entityPath}Id) {
+    public String toUpdate${entity}(@ApiParam(name = "Model", value = "model") Model model, @PathVariable(value = "${table.entityPath}Id") Long ${table.entityPath}Id) {
         //静态注入要回显的数据
         Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.mySelectMapById(${table.entityPath}Id);
         model.addAttribute("${table.entityPath}", ${table.entityPath});
@@ -80,7 +80,7 @@ public class ${table.controllerName} {
      */
     @GetMapping(value = "/create.html")
     @ApiOperation(value = "/create.html", notes = "跳转到新增页面")
-    public String toCreate${entity}(Model model) {
+    public String toCreate${entity}(@ApiParam(name = "Model", value = "model") Model model) {
         return "${table.entityPath}/new${entity}";
     }
     
